# MPITests

./: .gitignore  README.md  helloWorld.F90  helloWorld.mpi2.F90  helloWorld.mpi2.hybrid.F90  helloWorld.mpi3.F90  helloWorld.mpi3.hybrid.F90
AllReduce/: mpiallreduce.F90  mpiallreduce.c  mpiallreduce_f08.F90
AllReduceIMPIBug/: allreduce_bug.mpi_f08.F90  allreduce_bug.use_mpi.F90
CMakeTest/: CMakeLists.txt  helloWorld.mpi3.F90
CPtr/: support_for_mpi_alloc_mem_cptr.address_kind.F90  support_for_mpi_alloc_mem_cptr.mpi_f08.F90
CommSplit/: comm_split.F90
MPIIO/: test-withromio.c  test.c
MPIVersion/: mpiversion.F90  mpiversion.c
MPIVersion/mpiexec_version/: intelmpi.18.0.3.txt  mpich3.3.2.1.txt  mpiversion.sh  mpt.2.17.txt  mvapich2.2.3rc1.txt  openmpi.3.1.0.txt
MPI_Group_range_incl/: test.F90
PiCalc/: pi3f90.f90  submit_pi.cas.j  submit_pi.hasw.j  submit_pi.sky.j
Poisson/: Algorithm.md
Sessions/: helloWorld.mpi4.sessions.F90
ThreadMultiple/: boring_init.F90  boring_init.c  thread_multiple.F90  thread_multiple.mpi_f08.F90  thread_serialized.F90  thread_single.F90  thread_testing.F90
WinAllocateShared/: winallocateshared.F90  winallocateshared_f08.F90
WinLock/: sample.nml  test.F90  thread_win_lock.F90
mpi4py/: README.md  hello_mpi.py  mpi4py_rigorous_test.py
